# hackatime

./: .dockerignore  .env.example  .erb_lint.yml  .gitattributes  .gitignore  .prettierrc  .prettierrc.json  .rubocop.yml  .tokeignore  AGENTS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.production-worker  Gemfile  Procfile.dev  README.md  bunfig.toml  config.ru  docker-compose.yml  entrypoint.dev.sh  knip.json  package-lock.json  package.json  reset.sh  slack_manifest_harbor.yml  slack_manifest_sailors_log.yml  tsconfig.json  tsconfig.svelte-check.json  vite.config.ts
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
config/: application.rb  brakeman.ignore  ci.rb  database.yml  events.json  github_readme_themes.txt  honeybadger.yml  importmap.rb  languages.yml  languages_custom.yml  puma.rb  routes.rb  skylight.yml  storage.yml  themes.yml  vite.json
db/: clickhouse_schema.rb  schema.rb  seeds.rb  structure.sql
lib/: flavor_text.rb  git_metadata.rb  (+9 more)
rust-stats-server/: Cargo.toml  Dockerfile
rust-stats-server/src/: config.rs  db.rs  error.rs  main.rs  state.rs  time.rs
rust-stats-server/src/middleware/: auth.rs
rust-stats-server/src/models/: batch.rs  common.rs  duration.rs  leaderboard.rs  mod.rs  profile.rs  spans.rs  streaks.rs  summary.rs
rust-stats-server/src/query/: duration.rs  filters.rs  mod.rs  spans.rs  streaks.rs
rust-stats-server/src/routes/: batch.rs  boundary_aware.rs  daily_durations.rs  duration.rs  health.rs  leaderboard.rs  mod.rs  profile.rs  spans.rs  streaks.rs  summary.rs  unique_seconds.rs
(+1135 files in other folders)
